testcases/error/multiple_default.veryl
module multiple_default_clock {
    let _a: 'a default clock = 0;
    let _b: 'b default clock = 0;
}
